fix(field overflow): Overflow hidden for dropdowns

--- a/application/src/main/frontend/src/sass/base.scss
+++ b/application/src/main/frontend/src/sass/base.scss
@@ -88,6 +88,7 @@
 
 div.input-group > div.dropdown > .btn {
   max-width: 326px;
+  overflow: hidden;
 }
 
 div.dropdown > .btn {
